# CPP_NSU

./: README.md
custom_iterator/: Arr_Iterator.hpp  main.cpp
lab0-b/lib/: CMakeLists.txt  Reader.hpp  StringHelper.hpp  WordCounter.hpp  Writer.hpp
lab0-b/lib/word_counter/: word_counter.cpp  word_counter.hpp
lab1-b/: CMakeLists.txt  README.md
lab1-b/circularbuffer/: circularbuffer.cpp  circularbuffer.hpp
lab1-b/lib/: CMakeLists.txt  circularbuffer.hpp
lab1-b/lib/circularbuffer/: circularbuffer.cpp  circularbuffer.hpp
lab1-b/tests/: CMakeLists.txt  CircularBufferTests.cpp
lab2-game/: CMakeLists.txt  figure.hpp  main.cpp  pixel.hpp
lab2-game/lib/: Asteroid.hpp  Background.hpp  BackgroundElement.hpp  BackgroundMover.hpp  BackgroundPrinter.hpp  BackgroundSpawner.hpp  Bullet.hpp  Button.hpp  CMakeLists.txt  Engine.hpp  Game.hpp  GamePrinter.hpp  GameStarter.hpp  Menu.hpp  Mover.hpp  Shifter.hpp  Ship.hpp  Spawner.hpp  Starter.hpp  Textures.hpp  figure.hpp  figureCreater.hpp  pixel.hpp
lab2-game/lib/Calculates/: GameSpeed.hpp  Mover.hpp  Printer.hpp  Spawner.hpp
lab2-game/lib/Data/: Fonts.hpp  ResoursesLoader.hpp  Textures.hpp
lab2-game/lib/Figure/: FigureCreator.hpp  figure.cpp  figure.hpp
lab2-game/lib/GameObjects/: Asteroid.hpp  Bullet.hpp  Ship.hpp
lab2-game/lib/InterfaceElements/: Button.hpp  Text.hpp
lab2-game/lib/Map/: Map.cpp  Map.hpp
lab2-game/lib/Pixel/: Pixel.cpp  Pixel.hpp
lab2-game/src/: CMakeLists.txt  main.cpp
lab2-game/tests/: AsteroidTests.hpp  BacgroundElementTests.hpp  BackgroundElementTests.hpp  BackgroundMoverTests.hpp  BackgroundPrinterTests.hpp  BackgroundSpawnerTests.hpp  BackgroundTests.hpp  BulletTests.hpp  ButtonTests.hpp  CMakeLists.txt  GamePrinterTests.hpp  GameStarterTests.cpp  GameStarterTests.hpp  GameTests.cpp  GameTests.hpp  MapTests.cpp  MenuTests.hpp  MoverTests.cpp  MoverTests.hpp  ShipTests.hpp  SpawnerTests.cpp  SpawnerTests.hpp  TexturesTests.hpp  figureTests.cpp  mainTests.cpp  pixelTests.cpp
lab2-game/tests/CalculatesTests/: GameSpeedTests.hpp  MoverTests.hpp  PrinterTests.hpp  SpawnerTests.hpp
lab2-game/tests/DataTests/: FontsTests.hpp  ResoursesLoaderTests.hpp  TexturesTests.hpp
lab2-game/tests/GameObjectsTests/: AsteroidTests.hpp  BulletTests.hpp  ShipTests.hpp
lab2-game/tests/InterfaceElementsTests/: ButtonTests.hpp  TextTests.hpp
lab3/: CMakeLists.txt  ConfigReader.h  Consts.h  Converter.h  Coverters.hpp  Exceptions.h  ProcessManager.h  ReaderConfiguration.hpp  WAVEdit.h  WAVEditor.hpp  main.cpp
